--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Checkout package
         uses: actions/checkout@v2
       - name: Test package
-        uses: go test ./...
+        run: go test ./...
