--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,10 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Checkout package
         uses: actions/checkout@v2
+      - name: Download credentials
+        run: echo "$GOOGLE_CREDENTIALS" > gcloud-key.json
       - name: Test package
         run: go test ./...
         env:
           GOOGLE_PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
+          GOOGLE_CREDENTIALS: "gcloud-key.json"
