--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Test package
         run: |
           echo "Current folder: $PWD"
-          go test ./...
+          ls -la
+          go test -v ./...
         env:
           GOOGLE_PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
           GOOGLE_CREDENTIALS: "gcloud-key.json"
