--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,23 +6,27 @@ jobs:
       matrix:
         go-version: [1.13.x, 1.14.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
+        #    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
     steps:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.14.x
+          #go-version: ${{ matrix.go-version }}
       - name: Checkout package
         uses: actions/checkout@v2
       - name: Download credentials
         run: |
           echo "Current folder: $PWD"
+          echo "Credentials: $GOOGLE_CREDENTIALS"
           echo "$GOOGLE_CREDENTIALS" > gcloud-key.json
       - name: Test package
         run: |
           echo "Current folder: $PWD"
           ls -la
+          cat gcloud-key.json
           go test -v ./...
         env:
           GOOGLE_PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
-          GOOGLE_CREDENTIALS: "gcloud-key.json"
+          GOOGLE_APPLICATION_CREDENTIALS: "gcloud-key.json"
