--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,14 +6,12 @@ jobs:
       matrix:
         go-version: [1.13.x, 1.14.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        #    runs-on: ${{ matrix.platform }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.platform }}
     steps:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.14.x
-          #go-version: ${{ matrix.go-version }}
+          go-version: ${{ matrix.go-version }}
       - name: Checkout package
         uses: actions/checkout@v2
       - name: Download credentials
@@ -21,6 +19,8 @@ jobs:
           echo "Current folder: $PWD"
           echo "Credentials: $GOOGLE_CREDENTIALS"
           echo "$GOOGLE_CREDENTIALS" > gcloud-key.json
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
       - name: Test package
         run: |
           echo "Current folder: $PWD"
